--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
   },
   "homepage": "https://github.com/piontekle/fitfeel",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
-    "react": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "sequelize": "^5.2.12"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
     "jasmine": "^3.4.0",
+    "react": "^15.6.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-test-utils": "0.0.1",
     "request": "^2.88.0"
   }
 }
