--- a/package.json
+++ b/package.json
@@ -22,8 +22,17 @@
   },
   "homepage": "https://github.com/piontekle/fitfeel",
   "dependencies": {
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-validator": "^5.3.1",
+    "helmet": "^3.16.0",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-remember-me": "0.0.1",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "react-router-dom": "^5.0.0",
