Create user working

--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -5,7 +5,7 @@
     "database": "fitfeel-dev",
     "host": "127.0.0.1",
     "dialect": "postgres",
-    "logging": false,
+    "logging": true,
     "operatorsAliases": false
   },
   "test": {
