--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
   },
   "homepage": "https://github.com/piontekle/fitfeel",
   "dependencies": {
-    "bcrypt": "^3.0.5",
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-flash": "0.0.2",
+    "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -36,7 +40,7 @@
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "react-router-dom": "^5.0.0",
-    "sequelize": "^5.2.12"
+    "sequelize": "^5.7.1"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
