--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "client": "cd client && npm run start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install & npm run build"
   },
   "repository": {
     "type": "git",
@@ -40,7 +39,8 @@
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "react-router-dom": "^5.0.0",
-    "sequelize": "^5.7.1"
+    "sequelize": "^5.7.1",
+    "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
