--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "cd client && npm run start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install & npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
+    "path": "^0.12.7",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "react-router-dom": "^5.0.0",
