--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "export NODE_ENV=test && jasmine",
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "client": "cd client && npm run start",
+    "client": "npm start --prefix client",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,8 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "express-flash": "0.0.2",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
-    "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
@@ -48,7 +47,6 @@
     "concurrently": "^4.1.0",
     "jasmine": "^3.4.0",
     "react": "^15.6.2",
-    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-test-utils": "0.0.1",
     "request": "^2.88.0"
