--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": "10.15.1",
+    "npm": "6.9.0"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
