--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "typescript": "^3.4.2"
   },
@@ -19,10 +20,6 @@
   "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "engines": {
-    "node": "10.15.1",
-    "npm": "6.9.0"
   },
   "browserslist": [
     ">0.2%",
