--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "fitfeel",
   "version": "1.0.0",
   "description": "App to check-in mentally before and after workouts.",
+  "engines": {
+    "node": "10.15.1",
+    "npm": "6.9.0"
+  },
   "main": "server.js",
   "scripts": {
     "test": "export NODE_ENV=test && jasmine",
@@ -39,16 +43,12 @@
     "path": "^0.12.7",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
-    "react-router-dom": "^5.0.0",
     "sequelize": "^5.7.1",
     "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
     "jasmine": "^3.4.0",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-test-utils": "0.0.1",
     "request": "^2.88.0"
   }
 }
