prod db url update

--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -20,11 +20,11 @@
   "production": {
     "username": "postgres",
     "password": null,
-    "database": "process.env.DATABASE_URI",
+    "database": "process.env.DATABASE_URL",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "logging": false,
     "operatorAliases": false,
-    "use_env_variable": "DATABASE_URI"
+    "use_env_variable": "DATABASE_URL"
   }
 }
