--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "export NODE_ENV=test && jasmine",
     "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "client": "npm start --prefix client",
+    "client": "cd ./client && npm start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
