--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "material-design-lite": "^1.3.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "exports-loader": "^0.7.0",
     "jasmine": "^3.4.0",
     "request": "^2.88.0"
   }
