--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "reactjs-popup": "^1.4.1",
     "typescript": "^3.4.2"
   },
   "scripts": {
